# 3dprinter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  STM32F765ZGT6_FLASH.ld  config.openocd  start_gdb.sh  start_gdb.sh~
host-soft/: CMakeLists.txt  host-soft.kdev4
host-soft/gcode/: error.hpp  gcommand.hpp  gcpu.cpp  gcpu.hpp  parser.cpp  parser.hpp
host-soft/src/: main.cpp  uart.cpp  uart.hpp
mcu-soft/: CMakeLists.txt  README.md  mcu-soft.kdev4  start_gdb.sh  startup.s  toolchain.cmake  write_flash.sh
mcu-soft/newlib-supp/: newlib-supp.c
mcu-soft/src/: command.c  command.h  main.c  main.h  motor.c  motor.h  stm32f7xx_hal_conf.h  usbd_cdc_interface.c  usbd_cdc_interface.h
scripts/: kdevelop.gdb
src/: command.c  command.h  main.c  main.h  motor.c  stm32f7xx_it.c  usbd_cdc_interface.c  usbd_conf.c
